--- a/List/FooProject.Collection.csproj
+++ b/List/FooProject.Collection.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>net8.0;net481;netstandard2.0</TargetFrameworks>
     <ImplicitUsings>false</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <Version>1.0.1$(VersionPrefix)</Version>
   </PropertyGroup>
 
 </Project>
