デバックシンボルを生成するようにした

--- a/List/FooProject.Collection.csproj
+++ b/List/FooProject.Collection.csproj
@@ -5,6 +5,8 @@
     <ImplicitUsings>false</ImplicitUsings>
     <Nullable>disable</Nullable>
     <Version>1.0.4$(VersionPrefix)</Version>
+    <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
 </Project>
