キャッシュ関係も公開することした

--- a/UnitTest_net481/UnitTest_net481.csproj
+++ b/UnitTest_net481/UnitTest_net481.csproj
@@ -15,6 +15,7 @@
     <Compile Include="..\UnitTest\BigList.LeafEnumratorTest.cs" Link="BigList.LeafEnumratorTest.cs" />
     <Compile Include="..\UnitTest\BigListTest.cs" Link="BigListTest.cs" />
     <Compile Include="..\UnitTest\BigRangeListTest.cs" Link="BigRangeListTest.cs" />
+    <Compile Include="..\UnitTest\CacheTest.cs" Link="CacheTest.cs" />
     <Compile Include="..\UnitTest\DiskPinableContentDataStoreTest.cs" Link="DiskPinableContentDataStoreTest.cs" />
     <Compile Include="..\UnitTest\FixedListTest.cs" Link="FixedListTest.cs" />
     <Compile Include="..\UnitTest\InterfaceTests.cs" Link="InterfaceTests.cs" />
