所要時間を出すようにした

--- a/EditorDemo/EditorDemo.csproj
+++ b/EditorDemo/EditorDemo.csproj
@@ -13,6 +13,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\List\FooProject.Collection.csproj" />
+    <ProjectReference Include="..\TextReaderDemo\TextReaderDemo.csproj" />
   </ItemGroup>
+
+  <Import Project="..\SharedDemoProgram\SharedDemoProgram.projitems" Label="Shared" />
 
 </Project>
