--- a/TextReaderDemo/TextReaderDemo.csproj
+++ b/TextReaderDemo/TextReaderDemo.csproj
@@ -15,4 +15,6 @@
     <ProjectReference Include="..\List\FooProject.Collection.csproj" />
   </ItemGroup>
 
+  <Import Project="..\SharedDemoProgram\SharedDemoProgram.projitems" Label="Shared" />
+
 </Project>
