--- a/List/FooProject.Collection.csproj
+++ b/List/FooProject.Collection.csproj
@@ -9,4 +9,8 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.6.3" />
+  </ItemGroup>
+
 </Project>
