LoadAsyncメソッドを追加した

--- a/List/FooProject.Collection.csproj
+++ b/List/FooProject.Collection.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IO.Pipelines" Version="9.0.9" />
     <PackageReference Include="System.Memory" Version="4.6.3" />
   </ItemGroup>
 
