--- a/List/FooProject.Collection.csproj
+++ b/List/FooProject.Collection.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Buffers" Version="4.6.1" />
     <PackageReference Include="System.IO.Pipelines" Version="9.0.9" />
     <PackageReference Include="System.Memory" Version="4.6.3" />
   </ItemGroup>
