行や高さからインデックスに変換できるようにした

--- a/UnitTest_net481/UnitTest_net481.csproj
+++ b/UnitTest_net481/UnitTest_net481.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\UnitTest\BigIndexAndHeightListTest.cs" Link="BigIndexAndHeightListTest.cs" />
     <Compile Include="..\UnitTest\BigList.LeafEnumratorTest.cs" Link="BigList.LeafEnumratorTest.cs" />
     <Compile Include="..\UnitTest\BigListTest.cs" Link="BigListTest.cs" />
     <Compile Include="..\UnitTest\BigRangeListTest.cs" Link="BigRangeListTest.cs" />
