--- a/UnitTest_net481/UnitTest_net481.csproj
+++ b/UnitTest_net481/UnitTest_net481.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <Compile Include="..\UnitTest\BigIndexAndHeightListTest.cs" Link="BigIndexAndHeightListTest.cs" />
     <Compile Include="..\UnitTest\BigList.LeafEnumratorTest.cs" Link="BigList.LeafEnumratorTest.cs" />
+    <Compile Include="..\UnitTest\BigList.TestOnDisk.cs" Link="BigList.TestOnDisk.cs" />
     <Compile Include="..\UnitTest\BigListTest.cs" Link="BigListTest.cs" />
     <Compile Include="..\UnitTest\BigRangeListTest.cs" Link="BigRangeListTest.cs" />
     <Compile Include="..\UnitTest\CacheTest.cs" Link="CacheTest.cs" />
