テストパターンを追加した＆GCで回収される恐れがあった

--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -24,4 +24,6 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+  <Import Project="..\SharedDemoProgram\SharedDemoProgram.projitems" Label="Shared" />
+
 </Project>
