--- a/UnitTest_net481/UnitTest_net481.csproj
+++ b/UnitTest_net481/UnitTest_net481.csproj
@@ -40,4 +40,6 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+  <Import Project="..\SharedDemoProgram\SharedDemoProgram.projitems" Label="Shared" />
+
 </Project>
